--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,6 +31,8 @@ theme:
   - content.code.select
   language: es
 
+copyright: Copyright &copy; 2017 - 2023 Alvaro Díaz Valenzuela
+
 nav:
   - Home: index.md
   - Parte 1: Ejemplos_qcfinancial_1.md
@@ -66,9 +68,9 @@ extra:
   - icon: fontawesome/brands/twitter
     link: https://twitter.com/efaachile
   - icon: fontawesome/brands/linkedin
-    link: https://www.linkedin.com/in/tiangolo
-  - icon: fontawesome/brands/dev
-    link: https://dev.to/tiangolo
+    link: https://www.linkedin.com/in/alvaro-diaz-v-1bb95328/
+  # - icon: fontawesome/brands/dev
+  #  link: https://dev.to/tiangolo
   - icon: fontawesome/brands/medium
     link: https://medium.com/@efaa-adiazv
   - icon: fontawesome/solid/globe
