Se agrega NB 5_SwapICPCLP.ipynb que muestra como configurar un swap ICPCLP de mercado.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,6 +39,7 @@ nav:
   - Cashflows: 2_Cashflows.md
   - Construcción de Operaciones: 3_Construccion_Operaciones.md
   - Valorización y Sensibilidad: 4_Valorizacion_Sensibilidad.md
+  - Swap ICPCLP: 5_SwapICPCLP.md
 
 markdown_extensions:
   toc:
