Se agrega el notebook 6_Curva_SOFR.ipynb . Se muestra como calcular la curva SOFR por bootstrapping utilizando qcfinancial.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,6 +40,7 @@ nav:
   - Construcción de Operaciones: 3_Construccion_Operaciones.md
   - Valorización y Sensibilidad: 4_Valorizacion_Sensibilidad.md
   - Swap ICPCLP: 5_SwapICPCLP.md
+  - Curva SOFR: 6_Curva_SOFR.md
 
 markdown_extensions:
   toc:
